<?xml version="1.0"?>
<package>
    <name>octomap_catkin_gtest_example</name>
    <version>0.0.1</version>
    <description>A package showing how to use octomap in a ros package with catkin tools and GTest.</description>
    <maintainer email="jonathan.schmalhofer@mytum.de">Jonathan Bryan Schmalhofer</maintainer>

    <license>MIT</license>

    <author>Jonathan Bryan Schmalhofer</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>octomap</build_depend>
    <build_depend>octomap_ros</build_depend>
    <build_depend>cmake_modules</build_depend>

    <run_depend>octomap</run_depend>
    <run_depend>octomap_ros</run_depend>

</package>
